--- a/css/custom.css
+++ b/css/custom.css
@@ -37,10 +37,12 @@ ul {
     list-style: none;
 }
 #hero {
-    background-image:url(../img/hero.jpg);
-    height: 350px;
+    background-image:url(../img/portada.jpg);
+    background-attachment: fixed;
+    height: 90vh;
     background-size: cover;
 }
+
 #encabezado {
     margin: 30px 0;
 }
