images and styles modified

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,11 @@ header {
         text-align: left;
     }
 }
+
+#logo {
+    height: 70px;
+
+}
 .borrar-curso {
     background-color: red;
     border-radius: 50%;
@@ -103,9 +108,9 @@ ul {
 .barra {
     padding: 20px 0;
     background: #741d51; /* Old browsers */
-    background: -moz-linear-gradient(left, #741d51 0%, #e44e52 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, #741d51 0%,#e44e52 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, #741d51 0%,#e44e52 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(left, #1a4072 0%, #0c1e81 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #2a1d74 0%,#140a68 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #1c155a 0%,#1632cfe1 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#741d51', endColorstr='#e44e52',GradientType=1 ); /* IE6-9 */
 }
 
